--- a/app/chat/templates/rep.html
+++ b/app/chat/templates/rep.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set add_nav_padding = false %}
 {% block title %}Rep Dashboard{% endblock %}
 
 {% block navbar %}
@@ -40,7 +41,7 @@
   	<ul id="afterHoursList" class="divide-y border"></ul>
   	
   	<h2 class="font-bold mb-1">Program applications</h2>
-		<ul id="appList" class="divide-y border text-sm"></ul>
+  		<ul id="appList" class="divide-y border text-sm"></ul>
 
   </div>
 
