fixed typo in script src

--- a/app/main/templates/base.html
+++ b/app/main/templates/base.html
@@ -90,7 +90,7 @@
   <!-- Socket.IO + visitor widget -->
   <script defer src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
   <script defer type="module"
-  			src="{{ url_for('static', filename='js/chat_common.js') }}"></script>
+  			src="{{ url_for('chat.static', filename='js/chat_common.js') }}"></script>
   <script defer type="module"
   			src="{{ url_for('chat.static', filename='js/live_chat.js') }}"></script>
   <script defer
